-- SQL dump generated using DBML (dbml.dbdiagram.io)
-- Database: PostgreSQL
-- Generated at: 2025-10-07T20:14:25.088Z

CREATE TABLE "dim_date" (
  "date_key" int PRIMARY KEY,
  "date" date,
  "year" int,
  "quarter" int,
  "month" int,
  "day" int,
  "day_of_week" int,
  "is_weekend" boolean
);

CREATE TABLE "dim_region" (
  "region_key" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "region_id" char(36),
  "name" varchar(100),
  "code" varchar(10),
  "updated_at" timestamp
);

CREATE TABLE "dim_category" (
  "category_key" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "category_id" char(36),
  "name" varchar(255),
  "parent_category_key" int,
  "updated_at" timestamp
);

CREATE TABLE "dim_product" (
  "product_key" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "product_id" char(36),
  "name" varchar(255),
  "sku" varchar(100),
  "category_key" int,
  "updated_at" timestamp
);

CREATE TABLE "dim_customer" (
  "customer_key" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "customer_id" char(36),
  "first_name" varchar(100),
  "last_name" varchar(100),
  "email" varchar(255),
  "region_key" int,
  "updated_at" timestamp
);

CREATE TABLE "dim_employee" (
  "employee_key" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "employee_id" char(36),
  "first_name" varchar(100),
  "last_name" varchar(100),
  "email" varchar(255),
  "region_key" int,
  "updated_at" timestamp
);

CREATE TABLE "fact_sales" (
  "sales_key" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "order_id" char(36),
  "order_item_id" char(36),
  "date_key" int,
  "product_key" int,
  "customer_key" int,
  "employee_key" int,
  "region_key" int,
  "quantity" int,
  "revenue" decimal(10,2),
  "discount_amount" decimal(10,2),
  "cost" decimal(10,2),
  "margin" decimal(10,2)
);

CREATE UNIQUE INDEX ON "dim_region" ("code");

CREATE UNIQUE INDEX ON "dim_product" ("sku");

CREATE UNIQUE INDEX ON "dim_customer" ("customer_id");

CREATE UNIQUE INDEX ON "dim_employee" ("employee_id");

CREATE INDEX ON "fact_sales" ("date_key");

CREATE INDEX ON "fact_sales" ("product_key");

CREATE INDEX ON "fact_sales" ("customer_key");

CREATE INDEX ON "fact_sales" ("employee_key");

CREATE INDEX ON "fact_sales" ("region_key");

COMMENT ON COLUMN "dim_date"."date_key" IS 'Формат YYYYMMDD';

COMMENT ON COLUMN "dim_region"."region_id" IS 'Business key з OLTP';

COMMENT ON COLUMN "dim_category"."parent_category_key" IS 'Nullable';

ALTER TABLE "dim_category" ADD FOREIGN KEY ("parent_category_key") REFERENCES "dim_category" ("category_key");

ALTER TABLE "dim_product" ADD FOREIGN KEY ("category_key") REFERENCES "dim_category" ("category_key");

ALTER TABLE "dim_customer" ADD FOREIGN KEY ("region_key") REFERENCES "dim_region" ("region_key");

ALTER TABLE "dim_employee" ADD FOREIGN KEY ("region_key") REFERENCES "dim_region" ("region_key");

ALTER TABLE "fact_sales" ADD FOREIGN KEY ("date_key") REFERENCES "dim_date" ("date_key");

ALTER TABLE "fact_sales" ADD FOREIGN KEY ("product_key") REFERENCES "dim_product" ("product_key");

ALTER TABLE "fact_sales" ADD FOREIGN KEY ("customer_key") REFERENCES "dim_customer" ("customer_key");

ALTER TABLE "fact_sales" ADD FOREIGN KEY ("employee_key") REFERENCES "dim_employee" ("employee_key");

ALTER TABLE "fact_sales" ADD FOREIGN KEY ("region_key") REFERENCES "dim_region" ("region_key");
